--- a/Tut01.tex
+++ b/Tut01.tex
@@ -118,8 +118,8 @@ Was ist ein Algorithmus?
     for i:=0 to n-1
       if a[i] > a[i+1]
         (a[i],a[i+1]) := (a[i+1],a[i]) 
-\end{lstlisting}%\pause
-%Laufzeit ist $\Theta(n^2)$. Geht das noch besser?
+\end{lstlisting}\pause
+Laufzeit ist $\Theta(n^2)$. Geht das noch besser?
 \end{frame}
 
 \begin{frame}[fragile]
@@ -133,8 +133,8 @@ Was ist ein Algorithmus?
           (a[i],a[i+1]) := (a[i+1],a[i]) 
           swapped := true
     until swapped = false
-\end{lstlisting}%\pause
-%Laufzeit ist im worst (und average) case $\Theta(n^2)$, im best case aber $\Theta(n)$.
+\end{lstlisting}\pause
+Laufzeit ist im worst (und average) case $\Theta(n^2)$, im best case aber $\Theta(n)$.
 \end{frame}
 
 \begin{frame}
@@ -177,8 +177,8 @@ $a \cdot f( \textstyle \frac{n}{b} ) \leq c f(n)$\\ $\Rightarrow$ $T(n) \in \The
     $c_{0110}$ := recMult($a_1$ + $a_0$,$b_1$ + $b_0$)
     e := $c_{11}$ $\cdot$ $B^{2k}$ + ($c_{0110}$ - $c_{11}$ - $c_{00}$) $\cdot$ $B^k$ + $c_{00}$
     return e
-\end{lstlisting}%\pause
-%Mit Mastertheorem folgt: Die Laufzeit ist in $\Theta(n^{\log_2(3)})\approx\Theta(n^{1.58})$
+\end{lstlisting}\pause
+Mit Mastertheorem folgt: Die Laufzeit ist in $\Theta(n^{\log_2(3)})\approx\Theta(n^{1.58})$
 \end{frame}
 
 \begin{frame}[fragile]
@@ -189,8 +189,8 @@ $a \cdot f( \textstyle \frac{n}{b} ) \leq c f(n)$\\ $\Rightarrow$ $T(n) \in \The
       if a[i]=z
       	return true
     return false
-\end{lstlisting}%\pause
-%worst/average: $\Theta(n)$, best: $\Theta(1)$
+\end{lstlisting}\pause
+worst/average: $\Theta(n)$, best: $\Theta(1)$
 \end{frame}
 
 \begin{frame}[fragile]
@@ -204,8 +204,8 @@ $a \cdot f( \textstyle \frac{n}{b} ) \leq c f(n)$\\ $\Rightarrow$ $T(n) \in \The
       if a[m]=z then return true
       if a[m]>z then r:=m-1 else l:=m+1
     return false
-\end{lstlisting}%\pause
-%worst/average: $\Theta(\log(n))$, best: $\Theta(1)$
+\end{lstlisting}\pause
+worst/average: $\Theta(\log(n))$, best: $\Theta(1)$
 \end{frame}
 
 \begin{frame}[fragile]
@@ -215,7 +215,7 @@ Hier die Grobstruktur:
   function bogosort(a[0..n-1])
     while a ist nicht sortiert
       ordne Elemente von a per Zufall an
-\end{lstlisting}%\pause
-%best case: $\Theta(n)$, average case (laut Wikipedia): $Theta(n\cdot n!), und der worst case ist $\infty$!
+\end{lstlisting}\pause
+best case: $\Theta(n)$, average case (laut Wikipedia): $Theta(n\cdot n!)$, und der worst case ist $\infty$!
 \end{frame} 
 \end{document}
