Folien für Tut 2

--- a/Tut01.tex
+++ b/Tut01.tex
@@ -141,7 +141,7 @@ Laufzeit ist im worst (und average) case $\Theta(n^2)$, im best case aber $\Thet
 \frametitle{Aufgaben zum O-Kalkül}
 Zeige oder widerlege:
 \begin{enumerate}
-\item $10n^2 + 5n^2 \in \omega(n^2)$
+\item $10n^2 + 5n+2 \in \omega(n^2)$
 \item $\log_a(n)\in\Theta(\log_b(n))$ ($a,b>1$)
 \item $n^2 \in o(n^2 \log(n))$
 \item $(\log(n))^5 \in o(n)$
