--- a/pseudocode.tex
+++ b/pseudocode.tex
@@ -1,5 +1,5 @@
 \lstdefinelanguage{Pseudo}
-{keywords={Function,return,assert,while,for,to,downto,if,then,else},%
+{keywords={Function,Procedure,return,assert,while,for,to,downto,if,then,else,Pointer,Class,invariant,this,NIL},%
 emph={FALSE,TRUE},
 emphstyle=\color{colconst},
 sensitive=true,%
