Kleinen Fehler in Tut-Folien 4 korrigiert

--- a/Tut04.tex
+++ b/Tut04.tex
@@ -37,7 +37,7 @@ Verwende eine Tabelle $t[0..m-1]$ mit einfach verketteten Listen als Einträgen.
 \begin{itemize}
 \item insert(e): hänge Element an den Anfang der entsprechenden Liste. Laufzeit: \only<3>{O(1)}
 \item lookup(k): durchsuche die Liste bei $t[h(k)]$. Laufzeit: \only<3>{O(Listenlänge)}
-\item lookup(k): lösche das entsprechende Element aus der Liste bei $t[h(k)]$. Laufzeit: \only<3>{O(Listenlänge)}
+\item delete(k): lösche das entsprechende Element aus der Liste bei $t[h(k)]$. Laufzeit: \only<3>{O(Listenlänge)}
 \end{itemize}
 \end{frame}
 
