Hinweis Mittsemesterklausur hinzugefügt

--- a/Tut05.tex
+++ b/Tut05.tex
@@ -5,6 +5,14 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{Mittsemesterklausur}
+\begin{itemize}
+\item 3.6.2013, Audimax, 15:45-17:15
+\item 10-20\% der Übungspunkte
+\end{itemize}
+\end{frame}
+
+\begin{frame}
 \frametitle{Zum Übungsblatt}
 Beachtet bei Hashing:
 \begin{itemize}
