Striche in Folie 4 hochgestellt

--- a/Tut05.tex
+++ b/Tut05.tex
@@ -28,7 +28,7 @@ Beachtet bei Hashing:
 \frametitle{Sortieren}
 \begin{itemize}
 \item Gegeben sei eine Folge $s=\langle e_1,\ldots,e_n\rangle$ und eine lineare Ordnung $\leq$
-\item Gesucht: Folge $s^\prime=\langle e_1\prime,\ldots,e_n\prime\rangle$, sodass $s\prime$ Permutation von $s$ und $e_1\prime\leq e_2\prime\leq\ldots\leq e_n\prime$
+\item Gesucht: Folge $s^\prime=\langle e_1^\prime,\ldots,e_n^\prime\rangle$, sodass $s^\prime$ Permutation von $s$ und $e_1^\prime\leq e_2^\prime\leq\ldots\leq e_n^\prime$
 \end{itemize}
 \end{frame}
 
