Fehler in Tutfolien 7 (Heapsort) korrigiert

--- a/Tut07.tex
+++ b/Tut07.tex
@@ -54,7 +54,7 @@ $\Rightarrow$ O(n log n) Laufzeit?\pause
 Procedure heapSortDecreasing(a[1..n])
   buildHeap(a)
   for i:=n downto 2 do
-    h[i]:=deleteMin
+    a[i]:=deleteMin
 \end{lstlisting}
 \end{frame}
 
