--- a/Tut08.tex
+++ b/Tut08.tex
@@ -93,7 +93,7 @@ zusätzlicher Speicher verwendet werden. Die Laufzeit sollte in O(Baumtiefe) lie
 \begin{frame}
 \frametitle{(a,b)-Bäume}
 \begin{itemize}
-\item a$geq$2, b$\geq$2a-1
+\item a$\geq$2, b$\geq$2a-1
 \item Blätter wie vorher; allerdings gleiche Tiefe
 \item innere Knoten mit Ausgangsgrad a..b
 \item Wurzel hat Ausgangsgrad 2..b (1 für $\langle\rangle$)\pause
