Fehler in Tut11.tex, letzte Folie, korrigiert

--- a/Tut11.tex
+++ b/Tut11.tex
@@ -124,7 +124,7 @@ Class UnionFind(n:$\mathbb{N}$)
 Pro Jarník-Prim
 \begin{itemize}
 \item Asymptotisch gut für alle m,n
-\item Sehr schnell für m$\ll$n
+\item Sehr schnell für m$\gg$n
 \end{itemize}
 Pro Kruskal
 \begin{itemize}
