Index bei LP korrigiert

--- a/Tut12.tex
+++ b/Tut12.tex
@@ -17,7 +17,7 @@
 \begin{itemize}
 \item n Variablen, m Constraints\pause
 \item minimiere/maximiere f(x)=$\sum c_i x_i$
-\item $\sum a_{ij} x_i \leq b_j$ für $j\in\{1,\ldots,m\}$\pause
+\item $\sum a_{ji} x_i \leq b_j$ für $j\in\{1,\ldots,m\}$\pause
 \item Matrixdarstellung: min/max $c^t x$ und $A x\leq b$\pause
 \item in Polyzeit lösbar\pause
 \item Dualitätssatz
